--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gemini Next Chat",
-  "short_name": "Gemini Next Chat",
+  "name": "Mizo AI Chat",
+  "short_name": "Mizo AI Chat",
   "description": "Deploy your private Gemini application for free with one click, supporting Gemini 1.5 Pro, Gemini 1.5 Flash, Gemini Pro and Gemini Pro Vision models.",
   "id": "gemini-next-chat",
   "scope": ".",
