--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-description: Suggest an idea for this project
+description: He project hian hma a sawn theihnan a i ngaihdan teh rawn thawh rawh le
 title: '[Feature Request]: '
 labels: ['feature']
 
